--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         los parrafos son elementos en bloque pero el <strong> strong es un elemento en linea</strong>
     </p>
     <h2> Esto es un elemento en bloque </h2>
+    <h1>Hesto es un ha1</h1>
     <h2> Esto es un elemento en bloque </h2>
 
     
